# gen-ai-gateway

./: .gitignore  Dockerfile  INSTALL.md  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py  setup.cfg  tox.ini
gen_ai_gateway/: __init__.py  _version.py
gen_ai_gateway/apps/: __init__.py  main.py
gen_ai_gateway/src/: __init__.py  models.py  services.py
gen_ai_gateway/tests/: __init__.py  conftest.py  test_main.py  test_ppt_wrapper.py
ppt_wrapper/: __init__.py
venvgateway/: pyvenv.cfg
