[metadata]
name = gen-ai-gateway
author = Your Name
author_email = your.email@example.com
description = A FastAPI-based Gen AI Gateway service
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/gen-ai-gateway
project_urls =
    Bug Tracker = https://github.com/yourusername/gen-ai-gateway/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.100.0
    uvicorn[standard]>=0.23.0
    pydantic>=2.0.0
    python-multipart>=0.0.6

[options.packages.find]
where = .
include = gen_ai_gateway*, ppt_wrapper*

[options.extras_require]
dev = 
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    httpx>=0.24.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    tox>=4.0.0

[options.entry_points]
console_scripts =
    gen-ai-gateway = gen_ai_gateway.apps.main:main
